--- a/dataset-testing/src/iostable/res/values-de/strings.xml
+++ b/dataset-testing/src/iostable/res/values-de/strings.xml
@@ -4,5 +4,6 @@
     <string name="td_username">iostable username DE</string>
 
     <!--    Payment Journey Test Data    -->
-    <string name="td_payment">iostable payment DE</string>
+    <string name="td_swiftContactName">iostable UserName DE</string>
+    <string name="td_swiftContactAccountNumber">iostable Account# DE</string>
 </resources>
