--- a/dataset-testing/src/iostable/res/values/strings.xml
+++ b/dataset-testing/src/iostable/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="td_username">iostable username Eng</string>
 
     <!--    Payment Journey Test Data    -->
-    <string name="td_payment">iostable payment Eng</string>
+    <string name="td_swiftContactName">iostable UserName Eng</string>
+    <string name="td_swiftContactAccountNumber">iostable Account# Eng</string>
 </resources>
